@@ -1,3 +1,8 @@
+2015-01-04  Carl Hetherington  <cth@carlh.net>
+
+	* Fix loading of SMPTE XML subtitles which
+	are not MXF-wrapped.
+
 2014-12-14  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.0.25 released.
